# openfisca-nl

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  test-api.sh
.github/workflows/: build.yml  deploy.yml  validate.yml
openfisca_nl/: __init__.py
openfisca_nl/parameters/general/: age_of_majority.yaml  age_of_retirement.yaml
openfisca_nl/parameters/self_employment/: index.yaml  mkb_winstvrijstelling_rate.yaml  zelfstandigenaftrek.yaml
openfisca_nl/parameters/taxes/: housing_tax.yaml  income_tax_brackets.yaml  income_tax_brackets_aow.yaml  index.yaml  social_security_contribution.yaml
openfisca_nl/parameters/taxes/tax_credits/: algemene_heffingskorting_income_threshold.yaml  algemene_heffingskorting_max.yaml  algemene_heffingskorting_phase_out_rate.yaml  arbeidskorting_buildup_rate.yaml  arbeidskorting_max.yaml  arbeidskorting_max_income.yaml  arbeidskorting_phase_out_rate.yaml  index.yaml
openfisca_nl/reforms/: add_dynamic_variable.py  add_new_tax.py  flat_social_security_contribution.py  modify_social_security_taxation.py
openfisca_nl/tests/: disposable_income.yaml  income_tax.yaml  self_employment.yaml  social_security_contribution.yaml
openfisca_nl/tests/reforms/: add_dynamic_variable.yaml  add_new_tax.yaml  modify_social_security_taxation.yaml
openfisca_nl/tests/situations/: income_tax.yaml
openfisca_nl/variables/: benefits.py  demographics.py  housing.py  income.py  self_employment.py  stats.py  taxes.py
