[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "openfisca-nl"
version = "0.0.1"
description = "OpenFisca Rules-as-Code model for the Netherlands."
readme = "README.md"
keywords = [ "benefit", "microsimulation", "rac", "rules-as-code", "tax", "netherlands", "dutch" ]
maintainers = [  ]
authors = [  ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "openfisca-core[web-api]>=43",
]
optional-dependencies.dev = [
    "isort>=5.13.2,<6",
    "ruff>=0.6.9,<1",
    "ruff-lsp>=0.0.57,<1",
    "yamllint>=1.35.1",
]
urls.Changelog = "https://github.com/jokroese/openfisca-nl/blob/main/CHANGELOG.md"
urls.Documentation = "https://openfisca.org/doc"
urls.Homepage = "https://github.com/jokroese/openfisca-nl"
urls.Issues = "https://github.com/jokroese/openfisca-nl/issues"
urls.Repository = "https://github.com/jokroese/openfisca-nl"

[tool.ruff]
target-version = "py311"
format.docstring-code-line-length = 72
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN",
    "COM812",
    "D101",
    "D104",
    "I001",
    "ISC001",
    "N801",
    "N805",
    "N806",
    "PLR2004",
    "PTH100",
    "PTH118",
    "PTH120",
    "PTH123",
]
lint.pydocstyle.convention = "google"

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_alphabetical_sort_within_sections = false
group_by_package = true
honor_noqa = true
include_trailing_comma = true
known_first_party = [ "openfisca_nl" ]
known_openfisca = [ "openfisca_core", "openfisca_extension_template" ]
known_typing = [ "*collections.abc*", "*typing*", "*typing_extensions*" ]
known_types = [ "*types*" ]
multi_line_output = 3
profile = "black"
py_version = 311
sections = [
    "FUTURE",
    "TYPING",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pyproject-fmt]
column_width = 79
indent = 4
max_supported_python = "3.11"

[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules --disable-warnings --import-mode importlib"
testpaths = [ "openfisca_nl/tests" ]
python_files = "**/*.py"

[tool.tox]
requires = [ "tox>=4.20" ]
env_list = [ "py311", "py312", "lint", "dist" ]

[tool.tox.env_run_base]
allowlist_externals = [ "make" ]
commands = [ [ "make", "test" ] ]
commands_pre = [
    [
        "pip",
        "install",
        "--find-links",
        ".",
        "openfisca-nl",
    ],
]

[tool.tox.env.lint]
allowlist_externals = [ "make" ]
basepython = [ "py311" ]
commands = [ [ "make", "lint" ] ]
commands_pre = [
    [
        "pip",
        "install",
        "--find-links",
        ".",
        "openfisca-nl[dev]",
    ],
]

[tool.tox.env.dist]
basepython = [ "py311" ]
commands = [ [ "twine", "check", "dist/*" ] ]
commands_pre = [ [ "python", "-m", "build" ] ]
deps = [ "build", "twine" ]
