[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[tool.hatchling.build.targets.wheel]
packages = ["openfisca_nl"]

[tool.hatchling.build.targets.sdist]
include = [
    "openfisca_nl/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "CONTRIBUTING.md",
]

[project]
name = "openfisca-nl"
version = "0.0.1"
description = "OpenFisca Rules-as-Code model for the Netherlands."
readme = "README.md"
keywords = [ "benefit", "microsimulation", "rac", "rules-as-code", "tax", "netherlands", "dutch" ]
maintainers = [  ]
authors = [  ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "openfisca-core[web-api]>=43",
]
optional-dependencies.dev = [
    "isort>=5.13.2,<6",
    "poethepoet>=0.24.0",
    "ruff>=0.6.9,<1",
    "ruff-lsp>=0.0.57,<1",
    "yamllint>=1.35.1",
]
urls.Changelog = "https://github.com/jokroese/openfisca-nl/blob/main/CHANGELOG.md"
urls.Documentation = "https://openfisca.org/doc"
urls.Homepage = "https://github.com/jokroese/openfisca-nl"
urls.Issues = "https://github.com/jokroese/openfisca-nl/issues"
urls.Repository = "https://github.com/jokroese/openfisca-nl"

[tool.poe.tasks]
test = "openfisca test --country-package openfisca_nl openfisca_nl/tests"
serve = "openfisca serve --country-package openfisca_nl"
lint.shell = "isort --check . && ruff check . && yamllint ."
format.shell = "ruff format . && isort ."

[tool.ruff]
target-version = "py311"
format.docstring-code-line-length = 72
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN",
    "COM812",
    "D101",
    "D104",
    "I001",
    "ISC001",
    "N801",
    "N805",
    "N806",
    "PLR2004",
    "PTH100",
    "PTH118",
    "PTH120",
    "PTH123",
]
lint.pydocstyle.convention = "google"

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_alphabetical_sort_within_sections = false
group_by_package = true
honor_noqa = true
include_trailing_comma = true
known_first_party = [ "openfisca_nl" ]
known_openfisca = [ "openfisca_core", "openfisca_extension_template" ]
known_typing = [ "*collections.abc*", "*typing*", "*typing_extensions*" ]
known_types = [ "*types*" ]
multi_line_output = 3
profile = "black"
py_version = 311
sections = [
    "FUTURE",
    "TYPING",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pyproject-fmt]
column_width = 79
indent = 4
max_supported_python = "3.11"

[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules --disable-warnings --import-mode importlib"
testpaths = [ "openfisca_nl/tests" ]
python_files = "**/*.py"

[tool.tox]
requires = [ "tox>=4.20", "tox-uv>=1.0" ]
env_list = [ "py311", "py312", "lint", "dist" ]

[tool.tox.env_run_base]
commands = [ [ "openfisca", "test", "--country-package", "openfisca_nl", "openfisca_nl/tests" ] ]
runner = "uv-venv-lock-runner"
commands_pre = [
    [
        "uv",
        "pip",
        "install",
        "--find-links",
        ".",
        "openfisca-nl",
    ],
]

[tool.tox.env.lint]
basepython = [ "py311" ]
commands = [
    [ "isort", "--check", "." ],
    [ "ruff", "check", "." ],
    [ "yamllint", "." ],
]
runner = "uv-venv-lock-runner"
commands_pre = [
    [
        "uv",
        "pip",
        "install",
        "--find-links",
        ".",
        "openfisca-nl[dev]",
    ],
]

[tool.tox.env.dist]
basepython = [ "py311" ]
commands = [ [ "twine", "check", "dist/*" ] ]
runner = "uv-venv-lock-runner"
commands_pre = [ [ "uv", "build" ] ]
deps = [ "build", "twine" ]
